[explorer/frontend] fix: uppercase user currency symbol, add constant scrollbars to body to avoid page jumps

--- a/explorer/frontend/styles/globals.scss
+++ b/explorer/frontend/styles/globals.scss
@@ -34,6 +34,10 @@ body,
     background-color: $color-background-main;
 }
 
+body {
+    overflow-y: scroll;
+}
+
 #__next {
     font: $font-body;
 }
